# hydra

./: .env.example  .flake8  .gitattributes  .gitignore  BUILDER_AI_GUIDE.md  INDEX.md  LICENSE  PHASE1_VALIDATION.py  README.md  SETUP_COMPLETE.sh  STRUCTURE.md  hydragrid.code-workspace  pyproject.toml  pytest.ini  show_phase1_status.py
tests/: conftest.py  test_imports.py
